--- a/CuisinePage.html
+++ b/CuisinePage.html
@@ -9,12 +9,12 @@
 	</head>
 		<div>
 			<header id = "headerMain">
-				<img src="C:\Users\nabee\OneDrive\Desktop\Web Dev\Images\image.png" alt="Map of Bahrain" class="center">
+				<img src="C:\Users\nabee\OneDrive\Desktop\WebDevAssesment1\image.png" alt="Map of Bahrain" class="center">
 				<h1 id="Bahrain">THE KINGDOM OF BAHRAIN</h1>
 				<nav>
 					<table class="center1">
 						<tr>
-							<td><a href="HomePage.html">HOME</a></td>
+							<td><a href="index.html">HOME</a></td>
 							<td><a href="HistoryPage.html">HISTORY</a></td>
 							<td><a href="CuisinePage.html">CUISINE</a></td>
 							<td><a href="SubscriptionPage.html">SUBSCRIBE</a></td>
@@ -40,7 +40,7 @@
 						such as cheese, meat and pizza-style fillings. Fried to a superbly 
 						crunchy brilliant pastry.</p>
 					</td>
-					<td><img id="samboosa" src="C:\Users\nabee\OneDrive\Desktop\Web Dev\Images\samboosa2.jpg" alt="Samboosa"></td>
+					<td><img id="samboosa" src="C:\Users\nabee\OneDrive\Desktop\WebDevAssesment1\samboosa2.jpg" alt="Samboosa"></td>
 				</tr>
 				<tr>
 					<td>
@@ -49,7 +49,7 @@
 						a unique flavor that is mixed with anise, coriander, and cumin. Then it 
 						is blended to create a thick texture that would be poured over other dishes. It is usually used as a sauce.</p>
 					</td>
-					<td><img id="mehyawa" src="C:\Users\nabee\OneDrive\Desktop\Web Dev\Images\mehwaya1.jpg" alt="Samboosa"></td>
+					<td><img id="mehyawa" src="C:\Users\nabee\OneDrive\Desktop\WebDevAssesment1\mehwaya1.jpg" alt="Samboosa"></td>
 				</tr>
 				<tr>
 					<td>
@@ -58,7 +58,7 @@
 						made with flour, yeast, sugar, saffron, and some cardamom, these
 						crunchy gold desserts are traditional at almost every Bahraini table.</p>
 					</td>
-					<td><img id="luqaimat" src="C:\Users\nabee\OneDrive\Desktop\Web Dev\Images\luqaimat2.jpg" alt="Samboosa"></td>
+					<td><img id="luqaimat" src="C:\Users\nabee\OneDrive\Desktop\WebDevAssesment1\luqaimat2.jpg" alt="Samboosa"></td>
 				</tr>
 				<tr>
 					<td>
@@ -68,7 +68,7 @@
 						and meats (chicken, lamb, beef or shrimp) are cooked together, giving the rice 
 						more flavoring. The rice is also garnished with rose water and saffron and 
 						served with a a green chili sauce (Daqoos).</p>
-					<td><img id="machboos" src="C:\Users\nabee\OneDrive\Desktop\Web Dev\Images\machboos2.jpg" alt="Samboosa"></td>
+					<td><img id="machboos" src="C:\Users\nabee\OneDrive\Desktop\WebDevAssesment1\machboos2.jpg" alt="Samboosa"></td>
 				</tr>
 			</table>
 			</section>
@@ -84,7 +84,7 @@
 	</footer>
 	<nav id="Navigation2">
 		<ul>
-			<li><a href="HomePage.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="HistoryPage.html">History</a></li>
 			<li><a href="CuisinePage.html">Cuisine</a></li>
 			<li><a href="SubscriptionPage.html">Subscribe</a></li>
