--- a/HistoryPage.html
+++ b/HistoryPage.html
@@ -9,12 +9,12 @@
 	</head>
 		<div>
 			<header id = "headerMain">
-				<img src="C:\Users\nabee\OneDrive\Desktop\Web Dev\Images\image.png" alt="Map of Bahrain" class="center">
+				<img src="C:\Users\nabee\OneDrive\Desktop\WebDevAssesment1\image.png" alt="Map of Bahrain" class="center">
 				<h1 id="Bahrain">THE KINGDOM OF BAHRAIN</h1>
 				<nav>
 					<table class="center1">
 						<tr>
-							<td><a href="HomePage.html">HOME</a></td>
+							<td><a href="index.html">HOME</a></td>
 							<td><a href="HistoryPage.html">HISTORY</a></td>
 							<td><a href="CuisinePage.html">CUISINE</a></td>
 							<td><a href="SubscriptionPage.html">SUBSCRIBE</a></td>
@@ -137,7 +137,7 @@ that have contributed to the cultural growth of the Arabian Gulf.</p>
 	</footer>
 	<nav id="Navigation2">
 		<ul>
-			<li><a href="HomePage.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="HistoryPage.html">History</a></li>
 			<li><a href="CuisinePage.html">Cuisine</a></li>
 			<li><a href="SubscriptionPage.html">Subscribe</a></li>
