--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<head>
 		<title> The Kingdom of Bahrain </title>
 		<meta name="Home" content="Guide To The Kingdom of Bahrain"/>
-		<link href="HomePage.css" type="text/css" rel="stylesheet" />
+		<link href="index.css" type="text/css" rel="stylesheet" />
 
 	</head>
 	<body>
 		<div>
 			<header id = "headerMain">
-				<img src="C:\Users\nabee\OneDrive\Desktop\Web Dev\Images\image.png" alt="Map of Bahrain" class="center">
+				<img src="C:\Users\nabee\OneDrive\Desktop\WebDevAssesment1\image.png" alt="Map of Bahrain" class="center">
 				<h1 id="Bahrain">THE KINGDOM OF BAHRAIN</h1>
 				<nav>
 					<table class="center1">
 						<tr>
-							<td><a href="HomePage.html">HOME</a></td>
+							<td><a href="index.html">HOME</a></td>
 							<td><a href="HistoryPage.html">HISTORY</a></td>
 							<td><a href="CuisinePage.html">CUISINE</a></td>
 							<td><a href="SubscriptionPage.html">SUBSCRIBE</a></td>
@@ -90,7 +90,7 @@ it also has several interesting and surprising facts. Here are four fun facts ab
 	</footer>
 	<nav id="Navigation2">
 		<ul>
-			<li><a href="HomePage.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="HistoryPage.html">History</a></li>
 			<li><a href="CuisinePage.html">Cuisine</a></li>
 			<li><a href="SubscriptionPage.html">Subscribe</a></li>
